<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SchoolBusTracker</string>
    <string name="action_settings">Settings</string>
    <string name="welcome">Welcome to School BusTracker!</string>
    <string name="title_activity_route">School Bus Tracker Route</string>
    <string name="title_activity_login">Please Login First</string>
    <string name="login">Login</string>
    <string name="uname">User Name</string>
    <string name="pword">Password</string>
    <string name="pword1">Re-enter Password</string>
    <string name="fname">Full Name</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="updateLocation">Update Location</string>
    <string name="bus_hault">Bus Hault</string>
    <string name="register">Register</string>
    <string name="status">Already has account!</string>
    <string name="result"></string>
    <string name="user_name">User Name</string>
    <string name="SignIn">Sign In</string>
    <string name="SignUp">Sign Up</string>
    <string name="send">Send</string>
    <string name="logout">Log out</string>
    <string name="busStarted">Bus Started</string>
    <string name="notify">Update Location</string>
    <string name="modify">Modify Route</string>
    <string name="drop_user">Drop User</string>
    <string name="announcement">Add Announcement</string>
    <string name="changePassword">Change Password</string>
    <string name="updateProfile">Update Profile</string>
    <string name="save">Save</string>
    <string name="create">Create Notifications</string>
    <string name="update">Update</string>
    <string name="menu_legalnotices">Legal Notices</string>
    <string name="description">This is a school bus tracker system......</string>
    <string name="error_config">Please set the %1$s constant and recompile the app.</string>
    <string name="already_registered">Device is already registered on server.</string>
    <string name="gcm_registered">From GCM: device successfully registered!</string>
    <string name="gcm_unregistered">From GCM: device successfully unregistered!</string>
    <string name="gcm_message">From GCM: you got message!</string>
    <string name="gcm_error">From GCM: error (%1$s).</string>
    <string name="gcm_recoverable_error">From GCM: recoverable error (%1$s).</string>
    <string name="gcm_deleted">From GCM: server deleted %1$d pending messages!</string>
    <string name="server_registering">Trying (attempt %1$d/%2$d) to register device on SBT Server.</string>
    <string name="server_registered">From SBT Server: successfully added device!</string>
    <string name="server_unregistered">From SBT Server: successfully removed device!</string>
    <string name="server_register_error">Could not register device on SBT Server after %1$d attempts.</string>
    <string name="server_unregister_error">Could not unregister device on SBT Server (%1$s).</string>
    <string name="options_register">Register</string>
    <string name="options_unregister">Unregister</string>
    <string name="options_clear">Clear</string>
    <string name="options_exit">Exit</string>
    <string name="title_activity_register">Register Here</string>
    <string name="title_activity_user">Welcome to SchoolBusTracker</string>
    <string name="title_activity_admin">Welcome to SchoolBusTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_notification">NotificationActivity</string>
    <string name="title_activity_my_profile">MyProfileActivity</string>
    <string name="title_activity_admin_profile">ProfileActivity</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="title_activity_driver">DriverActivity</string>
    <string name="title_activity_driver_location">DriverLocationActivity</string>
    <string name="title_activity_driver_profile">DriverProfileActivity</string>

</resources>
