<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MyProfileActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/uname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtFullName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="#372c24" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:clickable="false"
                        android:text="@string/female" />
                </RadioGroup>

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="phone"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pword"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtReEnterPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pword1"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/password1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtBusHault"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bus_hault"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/bus_hault"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:enabled="false"
                    android:inputType="text" />

                <!-- Register Button -->

                <Button
                    android:id="@+id/btnChangePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/changePassword" />

                <Button
                    android:id="@+id/btnUpdateProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/updateProfile" />

                <Button
                    android:id="@+id/btnSave"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:clickable="false"
                    android:enabled="false"
                    android:text="@string/save" />

                <Button
                    android:id="@+id/btnUpdate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/update"
                    android:clickable="false" 
                    android:enabled="false" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/logout" />

</RelativeLayout>