<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_activity_admin" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="35dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.20"
                    android:src="@drawable/sbt_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="10dip" >

                <Button
                    android:id="@+id/notification"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/announcement" />


                <Button
                    android:id="@+id/modifyRoute"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/modify" />
                
                <Button
                    android:id="@+id/dropUser"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/drop_user" />

                <Button
                    android:id="@+id/admin_logout"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/logout" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</merge>