<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".RegisterActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/sbt_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="10dip" >

                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/uname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtFullName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/fname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtGender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender"
                    android:textColor="#372c24" />

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/female" />
                </RadioGroup>

                <TextView
                    android:id="@+id/txtAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/address"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/address"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="text"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtPhone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/phone"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/phone"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="phone"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pword"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/password"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtReEnterPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pword1"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/password1"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="textPassword"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtEmail"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/email"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:inputType="textEmailAddress"
                    android:singleLine="true" />

                <TextView
                    android:id="@+id/txtBusHault"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/bus_hault"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/bus_hault"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dip"
                    android:layout_marginTop="5dip"
                    android:inputType="text" />

                <!-- Register Button -->

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:onClick="register"
                    android:text="@string/register" />

                <TextView
                    android:id="@+id/register_status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dip"
                    android:layout_marginTop="40dip"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textColor="#025f7c"
                    android:textSize="20dip" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</merge>