<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".LoginActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/sbt_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="10dip" >
                
                <TextView
                    android:id="@+id/txtUserName"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/uname"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/uname"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="20dip"
                    android:inputType="text"
                    android:singleLine="true" >
                </EditText>

                <TextView
                    android:id="@+id/txtPassword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/pword"
                    android:textColor="#372c24" />

                <EditText
                    android:id="@+id/pword"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dip"
                    android:layout_marginBottom="20dip"
                    android:password="true"
                    android:singleLine="true" />

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/login" />

                <TextView
                    android:id="@+id/status"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="40dip"
                    android:layout_marginTop="40dip"
                    android:gravity="center"
                    android:text="@string/result"
                    android:textColor="#025f7c"
                    android:textSize="20dip" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</merge>
