<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:fillViewport="true" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:id="@+id/header"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dip"
                android:paddingTop="5dip" >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.25"
                    android:src="@drawable/sbt_icon" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/header"
                android:orientation="vertical"
                android:padding="10dip" >
                
				<TextView
				    android:id="@+id/info"
				    android:layout_width="fill_parent"
				    android:layout_height="wrap_content"
				    android:layout_marginBottom="40dip"
				    android:layout_marginTop="40dip"
				    android:gravity="center"
				    android:text="@string/welcome"
				    android:textColor="#025f7c"
				    android:textSize="20dip" />
                 
                <Button
                    android:id="@+id/btnSignIn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/SignIn" />
                
                <Button
                    android:id="@+id/btnSignUp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dip"
                    android:text="@string/SignUp" />

                
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>

</merge>